# transcribe-meeting-audio

./: README.md  justfile  pyproject.toml
scripts/: experiment_polish.py
src/transcribe_meeting_audio/: cli.py
src/transcribe_meeting_audio/adapters/: diarization_log.py
src/transcribe_meeting_audio/adapters/call_context/: bundle_id.py  unknown.py
src/transcribe_meeting_audio/adapters/device_registry/: static.py
src/transcribe_meeting_audio/adapters/diarizer/: identifying.py  pyannote.py
src/transcribe_meeting_audio/adapters/event_source/: coreaudio_mic.py  keyboard.py
src/transcribe_meeting_audio/adapters/session/: logging_session.py  process_tap_loopback_session.py  wav_mic_session.py  wav_session_factory.py
src/transcribe_meeting_audio/application/: label_meeting.py  record_meeting.py  transcribe_meeting.py
src/transcribe_meeting_audio/domain/: audio.py  diarization.py  events.py  meeting.py  speaker_bank.py  transcript.py
src/transcribe_meeting_audio/ports/: call_context.py  device_registry.py  diarizer.py  event_source.py  loopback_session.py  mic_session.py  session_factory.py  speaker_bank_repository.py  speaker_embedder.py  transcriber.py  transcript_polisher.py
tests/: conftest.py
tests/fakes/: recorded_loopback_session.py  recorded_mic_session.py  recording_session_factory.py  scripted_call_context.py  scripted_device_registry.py  scripted_event_source.py
tests/features/: meeting_detection.feature  recording_resilience.feature
tests/steps/: test_meeting_detection.py  test_recording_resilience.py
(+4 files in other folders)
