[project]
name = "transcribe-meeting-audio"
version = "0.1.0"
description = "Records macOS meetings with device-change resilience and ingests transcripts"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
record = [
    "sounddevice>=0.5",
    "soundfile>=0.13",
    "numpy>=2.0",
    "pyobjc-framework-coreaudio>=10",
]
transcribe = [
    "parakeet-mlx>=0.4",
]
diarize = [
    "pyannote-audio>=3.3",
]
polish = [
    "mlx-lm>=0.21",
]
all = ["transcribe-meeting-audio[record,transcribe,diarize,polish]"]

[project.scripts]
transcribe-meeting = "transcribe_meeting_audio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe_meeting_audio"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-bdd>=8.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "system: tests that touch macOS APIs (slow, opt in via --run-system)",
]
